Ideas submit button mobile view fix

--- a/kh1/css/style.css
+++ b/kh1/css/style.css
@@ -517,7 +517,7 @@ display: inline-block;
     }
 
     #idea-submit-container {
-      margin-top:90px;
+      margin-top:50px;
     }
 
     .idea-card {
